--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@primevue/themes": "4.0.0-rc.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^3.52.0",
+    "primevue": "4.0.0-rc.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
