--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.vue\" \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.vue\" \"src/**/*.ts\" --fix",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "test:unit": "vitest --ui",
+    "test:update": "vitest --ui --update",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@primevue/themes": "4.0.0-rc.2",
@@ -28,12 +31,16 @@
     "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "@vue/apollo-composable": "^4.0.2",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.5.0",
     "eslint-plugin-vue": "^9.26.0",
     "graphql": "^16.9.0",
+    "jsdom": "^24.1.0",
     "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
